# ocaml-raycast

./: .gitignore  .ocamlformat  README.md  dune-project  image.ppm  raycast.opam  raytracer.opam
lib/: aabb.ml  aabb.mli  bvh.ml  bvh.mli  camera.ml  camera.mli  color.ml  color.mli  dune  hit_record.ml  hit_record.mli  hittable.ml  hittable.mli  interval.ml  interval.mli  material.ml  material.mli  plane.ml  plane.mli  ray.ml  ray.mli  sphere.ml  sphere.mli  vec3.ml  vec3.mli  world.ml  world.mli
test/: dune  test_raycast.ml  test_raytracer.ml
